--- a/GTTTimeImporterSettingsView.xaml
+++ b/GTTTimeImporterSettingsView.xaml
@@ -6,9 +6,9 @@
              mc:Ignorable="d"
              d:DesignHeight="400" d:DesignWidth="600">
     <StackPanel>
-        <TextBlock Text="Description for Option1:"/>
-        <TextBox Text="{Binding Option1}"/>
-        <TextBlock Text="Description for Option2:"/>
-        <CheckBox IsChecked="{Binding Option2}"/>
+        <TextBlock Text="Shortcuts.vdf path:"/>
+        <TextBox Text="{Binding Settings.ShortcutsVdfPath}"/>
+        <TextBlock Text="GTT db path:"/>
+        <TextBox Text="{Binding Settings.GTTDbPath}"/>
     </StackPanel>
 </UserControl>
